# vacation

./: Cargo.toml  LICENSE  README.md
src/: block_in_place.rs  concurrency_limit.rs  current_context.rs  custom_executor.rs  error.rs  future.rs  lib.rs  secondary_tokio_runtime.rs  spawn_blocking.rs
src/executor/: current_context.rs  custom.rs  custom_executor.rs  execute_directly.rs  mod.rs  spawn_blocking.rs
src/future/: first.rs  mod.rs  with.rs
tests/: block_in_place_concurrency.rs  block_in_place_default.rs  block_in_place_strategy.rs  block_in_place_wrong_runtime.rs  current_context_cancellable.rs  current_context_concurrency.rs  current_context_default.rs  current_context_strategy.rs  custom_closure_strategy.rs  custom_closure_strategy_illegal.rs  custom_closure_strategy_legal.rs  custom_closure_strategy_legal_tokio_spawn.rs  custom_closure_strategy_tokio_spawn.rs  custom_executor_cancellable.rs  custom_executor_concurrency.rs  custom_executor_simple.rs  custom_executor_strategy.rs  custom_executor_tokio_spawn_strategy.rs  custom_simple.rs  custom_strategy.rs  default_current_thread_tokio.rs  default_multi_threaded_tokio.rs  default_no_tokio.rs  execute_directly_default.rs  execute_directly_strategy.rs  future.rs  multiple_initialize_err.rs  multiple_initialize_err_with_open_builder.rs  multiple_initialize_err_with_secondary_runtime_builder.rs  mutlithreaded.rs  offload_first.rs  offload_with.rs  secondary_tokio_allowed_config.rs  secondary_tokio_builder_allowed_config.rs  secondary_tokio_builder_disallowed_config.rs  secondary_tokio_cancellable.rs  secondary_tokio_concurrency.rs  secondary_tokio_concurrencyrs  secondary_tokio_disallowed_config.rs  secondary_tokio_runtime_strategy.rs  (+8 more)
