[package]
name = "compute-heavy-future-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jlizen/compute-heavy-future-executor"
homepage = "https://github.com/jlizen/compute-heavy-future-executor"
rust-version = "1.70"
exclude = ["/.github", "/examples", "/scripts"]
readme = "README.md"
description = "Additional executor patterns for handling compute-bounded, blocking futures."
categories = ["asynchronous"]

[features]
tokio = ["tokio/rt"]
tokio_block_in_place = ["tokio", "tokio/rt-multi-thread"]
secondary_tokio_runtime = ["tokio", "tokio/rt-multi-thread", "dep:libc", "dep:num_cpus"]

[dependencies]
libc = { version = "0.2.168", optional = true }
log = "0.4.22"
num_cpus = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["macros", "sync"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"]}
futures-util = "0.3.31"

[package.metadata.docs.rs]
all-features = true


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
