[package]
name = "compute-heavy-future-executor"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jlizen/compute-heavy-future-executor"
homepage = "https://github.com/jlizen/compute-heavy-future-executor"
rust-version = "1.70"
exclude = ["/.github", "/Exampless", "/scripts"]
readme = "README.md"
description = "Executor patterns for handling compute-bounded calls inside async contexts."
categories = ["asynchronous"]

[features]
default = ["tokio"]
tokio = ["tokio/rt",]

[dependencies]
log = "0.4.22"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"]}
futures-util = "0.3.31"
rayon = "1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
