[package]
name = "vacation"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/jlizen/vacation"
homepage = "https://github.com/jlizen/vacation"
rust-version = "1.70"
exclude = ["/.github", "/examples", "/scripts"]
readme = "README.md"
description = "Give your (runtime) workers a break!"
categories = ["asynchronous", "executor"]

[features]
default = []
tokio = ["tokio/rt"]

[dependencies]
log = "0.4.22"
num_cpus = "1.0"
tokio = { version = "1.0", features = ["sync"] }

[dev-dependencies]
futures-util = "0.3"
rayon = "1"
tokio = { version = "1", features = ["full"]}

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }
